# WhatsminerTgBot

./: CMakeLists.txt  README.md
img/: whatsminer.xcf
src/: CMakeLists.txt  devicemanager.cpp  devicemanager.h  hintinputdialog.cpp  hintinputdialog.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plaintextconsole.cpp  plaintextconsole.h  rsrc.qrc  tgbotmanager.cpp  tgbotmanager.h  tgbotthreadwrapper.cpp  tgbotthreadwrapper.h  treetablemodels.cpp  treetablemodels.h  whatsminerdevice.cpp  whatsminerdevice.h
styles/: styles.qss
